--- a/example.yml
+++ b/example.yml
@@ -1,1 +1,78 @@
+# my global config
+global:
+  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
 
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+    - static_configs:
+      - targets: ['10.0.0.160:9093']
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+rule_files:
+- "/alertmanager/alert.rules.yml"
+
+# A scrape configuration containing exactly one endpoint to scrape:
+# Here it's Prometheus itself.
+scrape_configs:
+  
+  - job_name: "prometheus"
+    static_configs:
+      - targets: ["localhost:9090"]
+
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['node-exporter:9100']
+
+  - job_name: 'snmp-exporter'
+    static_configs:
+      - targets: ['10.0.0.160:9116']
+  
+  - job_name: 'windows'
+    static_configs:
+      - targets: ['10.0.0.154:9182']
+
+  - job_name: 'linux'
+    static_configs:
+      - targets: ['10.0.0.161:9100']
+  
+  - job_name: 'Mikrotik'
+    static_configs:
+      - targets:
+        - 10.0.0.165  # Mikrotik device.
+    metrics_path: /snmp
+    params:
+      module: [mikrotik]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 10.0.0.160:9116
+  
+  - job_name: 'docker'
+    metrics_path: /metrics
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:9323']
+  
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:8080']
+      
+  - job_name: 'node1'
+    static_configs:
+      - targets: ['10.0.0.171:9100']
+  - job_name: 'node2'
+    static_configs:
+      - targets: ['10.0.0.172:9100']
+  - job_name: 'node3'
+    static_configs:
+      - targets: ['10.0.0.173:9100']
+  - job_name: 'node4'
+    static_configs:
+      - targets: ['10.0.0.169:9100']
+ 
