--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-
-version: "3.9"
+version: "3.1"
 services:
   grafana:
-    image: grafana/grafana:10.1.5-ubuntu
+    image: grafana/grafana:11.1.6-ubuntu
     ports:
       - "3000:3000"
     networks:
       - loki
     volumes:
       - grafana-data:/var/lib/grafana
-      - grafana-configs:/etc/grafana
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources/
+      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards/
   prometheus:
-    image: prom/prometheus:v2.47.2
+    image: prom/prometheus:v2.52.0
     ports:
       - "9090:9090"
     networks:
@@ -19,22 +19,24 @@ services:
     volumes:
       - prom-data:/prometheus
       - prom-configs:/etc/prometheus
-      - /your/path/alert.rules.yml:/alertmanager/alert.rules.yml
+      - ./alertmanager/alert.rules.yml:/alertmanager/alert.rules.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
   node-exporter:
-    image: prom/node-exporter:v1.6.1
+    image: prom/node-exporter:v1.8.1
     ports:
       - "9100:9100"
     networks:
       - loki
     volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
+      - prom-data:/prometheus
+      - ./alertmanager/alert.rules.yml:/etc/prometheus/alert.rules.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude'
-      - '^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.external-url=http://127.0.0.1:9090"
+      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
+      - "--web.console.templates=/usr/share/prometheus/consoles"
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.0
     ports:
@@ -53,13 +55,7 @@ services:
     networks:
       - loki
     volumes:
-      - /your/path/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-  snmp-exporter:
-    image: quay.io/prometheus/snmp-exporter
-    ports:
-      - "9116:9116"
-    networks:
-      - loki
+      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
 networks:
   loki:
     driver: overlay
@@ -68,4 +64,4 @@ volumes:
   grafana-data:
   grafana-configs:
   prom-data:
-  prom-configs: 
+  prom-configs:
