--- a/alertmanager/alert.rules.yml
+++ b/alertmanager/alert.rules.yml
@@ -2,75 +2,78 @@ groups:
 - name: Prometheus self-monitoring
   rules:
   - alert: Prometheus target missing
-    expr: 'up == 0'
+    expr: up == 0
     annotations:
-     description: A Prometheus target has disappeared. An exporter might be crashed.
+      description: A Prometheus target has disappeared. An exporter might be crashed.
     labels:
       severity: critical
+
   - alert: Prometheus AlertManager config not synced
-    expr: 'count(count_values("config_hash", alertmanager_config_hash)) > 1'
+    expr: count(count_values("config_hash", alertmanager_config_hash)) > 1
     annotations:
-     description: Configurations of AlertManager cluster instances are out of sync
+      description: Configurations of AlertManager cluster instances are out of sync
     labels:
       severity: warning
+
   - alert: Prometheus target scraping slow
-    expr: 'prometheus_target_interval_length_seconds{quantile="0.9"} > 60'
+    expr: prometheus_target_interval_length_seconds{quantile="0.9"} > 60
     annotations:
-     description: Prometheus is scraping exporters slowly
+      description: Prometheus is scraping exporters slowly
     labels:
       severity: warning
     for: 5m
-  - name: cpu_alerts
-    rules:
-      - alert: HighCpuLoad
-        expr: sum(rate(node_cpu_seconds_total{mode="system"}[5m])) by (instance) > 0.85
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "High CPU Load"
-          description: "CPU on {{ $labels.instance }} has exceeded 85% for the last 5 minutes."
 
-  - name: service_availability
-    rules:
-      - alert: ServiceDown
-        expr: up{job="your_service"} == 0
-        for: 15s
-        labels:
-          severity: critical
-        annotations:
-          summary: "Service Down"
-          description: "Service {{ $labels.job }} on {{ $labels.instance }} has been down."
+- name: cpu_alerts
+  rules:
+  - alert: HighCpuLoad
+    expr: sum(rate(node_cpu_seconds_total{mode="system"}[5m])) by (instance) > 0.85
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High CPU Load"
+      description: "CPU on {{ $labels.instance }} has exceeded 85% for the last 5 minutes."
 
-  - name: docker_alerts
-    rules:
-      - alert: DockerContainerDown
-        expr: absent(container_memory_usage_bytes{container_name="your_container_name"})
-        for: 5m
-        labels:
-          severity: critical
-        annotations:
-          summary: "Docker Container Down"
-          description: "Container {{ $labels.container_name }} on {{ $labels.instance }} has been down for more than 5 minutes."
+- name: service_availability
+  rules:
+  - alert: ServiceDown
+    expr: up{job="your_service"} == 0
+    for: 15s
+    labels:
+      severity: critical
+    annotations:
+      summary: "Service Down"
+      description: "Service {{ $labels.job }} on {{ $labels.instance }} has been down."
 
-  - name: elk_alerts
-    rules:
-      - alert: ELKStackDown
-        expr: up{job="elk"} == 0
-        for: 15s
-        labels:
-          severity: critical
-        annotations:
-          summary: "ELK Stack Down"
-          description: "ELK Stack on {{ $labels.instance }} has been down."
+- name: docker_alerts
+  rules:
+  - alert: DockerContainerDown
+    expr: absent(container_memory_usage_bytes{container_name="your_container_name"})
+    for: 5m
+    labels:
+      severity: critical
+    annotations:
+      summary: "Docker Container Down"
+      description: "Container {{ $labels.container_name }} on {{ $labels.instance }} has been down for more than 5 minutes."
 
-  - name: memory_alerts
-    rules:
-      - alert: HighMemoryUsage
-        expr: (node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes > 0.8
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "High Memory Usage"
-          description: "Memory usage on {{ $labels.instance }} has exceeded 80% in the last 5 minutes."
+- name: elk_alerts
+  rules:
+  - alert: ELKStackDown
+    expr: up{job="elk"} == 0
+    for: 15s
+    labels:
+      severity: critical
+    annotations:
+      summary: "ELK Stack Down"
+      description: "ELK Stack on {{ $labels.instance }} has been down."
+
+- name: memory_alerts
+  rules:
+  - alert: HighMemoryUsage
+    expr: (node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes > 0.8
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: "High Memory Usage"
+      description: "Memory usage on {{ $labels.instance }} has exceeded 80% in the last 5 minutes."
